# labs-striker

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .gitreview  .mailmap  .travis.yml  Gruntfile.js  Makefile  README.rst  docker-compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  vite.config.mjs
.pipeline/: blubber.yaml  config.yaml  local-python.Dockerfile
contrib/: add-maintainer.sh  add-ssh.sh  add-tool.sh  add-user.sh  collectstatic.sh  del-tool.sh  make_env.sh  manage.sh
contrib/docker/: Makefile  README.md  cloud-vps.yaml  striker.ini  striker.service
contrib/docker/keystone/: Dockerfile  README.md  config.json
contrib/docker/keystone/src/etc/: ldap.conf
contrib/docker/keystone/src/etc/apache2/sites-enabled/: keystone.conf
contrib/docker/keystone/src/etc/keystone/: logging.conf  policy.yaml
contrib/docker/keystone/src/striker/: admin-openrc.j2  dtu.py  extend_start.sh  keystone.conf.j2  post_start.sh
contrib/docker/keystone/src/usr/lib/python3/dist-packages/keystone/cmd/: bootstrap.py
contrib/docker/mariadb/: Dockerfile
contrib/docker/mariadb/docker-entrypoint-initdb.d/: 00-create-dbs-and-users.sh  10-ldapwiki.sql  20-sulwiki.sql  30-bitu.sql
contrib/docker/mediawiki/: Dockerfile  apache2.conf
contrib/docker/mediawiki/ldapwiki/: LocalSettings.php
contrib/docker/mediawiki/sulwiki/: LocalSettings.php
contrib/docker/openldap/: Dockerfile  README.md
contrib/docker/openldap/bootstrap/ldif/: 00-base.ldif  00-striker.ldif  01-ppolicy-load.ldif  01-ppolicy-policy.ldif  02-security.ldif  99-index.ldif
contrib/docker/openldap/bootstrap/ldif/readonly-user/: readonly-user-acl.ldif
contrib/docker/openldap/bootstrap/schema/: ppolicy.ldif
contrib/docker/openldap/environment/: striker.startup.yaml
contrib/docker/phabricator/: Dockerfile
contrib/docker/phabricator/docker-entrypoint-init.d/: 00-phabricator.sh
docs/: Makefile  conf.py  index.rst  requirements.txt
etc/ldap/: ldap.conf
static/css/: home.less  layout.less  site.css  striker.less
static/img/: favicon.icns
static/js/: password-strength.js  password-strength.mjs  register.js  site.js  striker.mjs  zxcvbn.min.js
striker/: admin.py  decorators.py  gitlab.py  logging.py  mediawiki.py  middleware.py  monitor.py  openstack.py  phabricator.py  settings.py  striker.ini  tests.py  urls.py  views.py  wsgi.py
striker/db/: __init__.py  base.py
striker/goals/: __init__.py  admin.py  apps.py  models.py  views.py
striker/goals/migrations/: 0001_initial.py  0001_squashed.py  0002_auto_20160531_1721.py
striker/goals/signals/: handlers.py
striker/labsauth/: admin.py  backends.py  constants.py  default_settings.py  forms.py  middleware.py  models.py  router.py  urls.py  utils.py  views.py
striker/labsauth/migrations/: 0001_initial.py  0001_squashed.py  0002_auto_20160508_0419.py  0002_ldapuser_posixaccount_posixgroup.py  0003_update_ldap_label_to_developer_accounts.py  0004_labsuser_sulid.py  0005_remove_labsuser_realname.py
striker/profile/: forms.py  urls.py  utils.py  utils_test.py  views.py
striker/register/: forms.py  urls.py  utils.py  views.py
striker/static/css/: site.css
striker/templates/: 400.html  403.html  404.html  500.html  _nav_user.html  _password-strength-meter.html  about.html  base.html  index.html
striker/templates/errors/: 400.html  403.html  404.html  500.html  base.html
striker/templates/goals/: ACCOUNT_PHAB.html  ACCOUNT_SSH.html  ACCOUNT_SUL.html  TOOL_GIT.html  TOOL_MAINTAINER.html  TOOL_MEMBER.html  base.html
striker/templates/index/: anon.html  authed.html  base.html
striker/templates/labsauth/: base.html  login.html  logout.html  oath.html
striker/templates/notifications/: list.html  notice.html
striker/templates/profile/: index.html  nojs.html  settings.html
striker/templates/profile/settings/: accounts.html  base.html  change-password.html  ldap.html  phabricator.html  ssh-keys.html  sul.html
striker/templates/profile/settings/accounts/: ldap.html  phabricator.html  sul.html
striker/templates/profile/settings/ssh-keys/: delete-confirm.html
striker/templates/register/: base.html  confirm.html  disabled.html  email.html  index.html  ldap.html  password.html  shell.html
striker/templates/tools/: create.html  disable-confirm.html  index.html  maintainers.html  membership.html  repo.html  tool.html
striker/templates/tools/info/: create.html  delete.html  history.html  read.html  record.html  revision.html  update.html
striker/templates/tools/info/revision/: body.html  header.html
striker/templates/tools/membership/: apply.html  requirements.html  status.html
striker/templates/tools/project/: create.html  view.html
striker/templates/tools/repo/: create.html
striker/templates/tools/templatetags/: phab_policy.html  phab_policy_custom.html  phab_project.html  phab_rule.html  phab_user.html
striker/templatetags/: banner.py  fontawesome.py  vite.py
striker/test/: settings.py
striker/tools/: __init__.py  admin.py  cache.py  default_settings.py  forms.py  models.py  monkey_patch_reversion.py  urls.py  utils.py  views.py
striker/tools/fixtures/: software_license.json
striker/tools/migrations/: 0001_initial.py  0001_squashed.py  0002_auto_20160531_1653.py  0002_auto_20160719_0436.py  0003_accessrequest.py  0004_accessrequest_suppress.py  0005_toolinfo.py  0006_monkey_patch_reversion.py  0007_toolinfo_tags.py  0008_ldap_models.py  0009_toolinfo_authors.py  0010_T168027.py  0011_auto_20190102_0319.py  0012_phabricatorproject.py  0013_gitlabrepo.py  0014_diffusionrepo_gitlab.py
striker/tools/templatetags/: membership.py  tools.py
striker/tools/views/: __init__.py  decorators.py  membership.py  membership_test.py  project.py  repo.py  tool.py  toolinfo.py
