[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry]
name = "striker"
version = "0.1.0"
description = "Wikimedia Toolforge admin console"
authors = ["Bryan Davis <bd808@wikimedia.org>", "Taavi Väänänen <hi@taavi.wtf>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.11"
cffi = ">=1.15.0,<2"
cryptography = "^45"
django = "^4.2"
django-auth-ldap = "^5.2"
django-autocomplete-light = ">=3.3.5,<4"
django-bootstrap3 = "^25.1"
django-csp = "^4.0"
django-environ = "^0.12.0"
django-formtools = ">=2.3,<3"
django-ipware = "^7.0"
# v2.0, https://github.com/django-ldapdb/django-ldapdb/issues/215
django-ldapdb = {git = "https://github.com/django-ldapdb/django-ldapdb.git", rev = "eb9503c85cd230f45765ec8fcd9fc21dbc81ce4c"}
django-log-request-id = ">=2.0.0,<3"
django-notifications-hq = ">=1.7.0,<2"
django-parsley = ">=0.7,<1"
django-ratelimit-backend = {git = "https://github.com/supertassu/django-ratelimit-backend.git", rev = "61bcc2f7fac85df7d8ba96b5cfda416c98141949"}
django-reversion = ">=5.0.0,<6"
django-reversion-compare = "^0.18.1"
mwclient = "^0.11"
mwoauth = "^0.4"
mysqlclient = ">=2.1.0,<3"
oauthlib = ">=3.0.2,<4"
pyldap = ">=3.0.0.post1,<4"
pymemcache = "^4.0.0"
python-keystoneclient = "^5"
python-logstash = ">=0.4.8,<1"
requests = ">=2.27.1,<3"
sshpubkeys = ">=3.3.1,<4"
whitenoise = ">=6.2.0,<7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-django = "^4.8.0"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "tests.py"]
